<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StandUp</string>
    <string name="title">StandUp</string>
    <string name="qYesterday">What did I do yesterday?</string>
    <string name="qToday">What am I going to do today?</string>
    <string name="qWay">What’s in my way?</string>
    <string name="reset">Reset</string>
    <string name="go">Go!</string>
    <string name="countdown">20s</string>
</resources>
